--- a/view/DistConverterUI.html
+++ b/view/DistConverterUI.html
@@ -28,7 +28,7 @@
         <input id="Miles" type="number" placeholder="Miles.." />
         <hr />
         <div class="d-flex justify-content-end">
-          <button class="btn btn-outline-danger btn-lg" onclick="location.href='Index.html'">Temperature conv.</button>
+          <button class="btn btn-outline-danger btn-lg" onclick="location.href='./index.html'">Temperature conv.</button>
         </div>
       </div>
     </div>
